[ci skip] Fix user guide search functionality. Fixes #3458

--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -44,6 +44,7 @@
   {%- endfor %}
 
   {# JAVASCRIPTS #}
+  {%- block scripts %}
   <script type="text/javascript" src="{{ pathto('_static/js/modernizr.min.js', 1) }}"></script>
   {%- if not embedded %}
   {# XXX Sphinx 1.8.0 made this an external js-file, quick fix until we refactor the template to inherert more blocks directly from sphinx #}
@@ -77,6 +78,7 @@
           href="{{ pathto('_static/opensearch.xml', 1) }}"/>
     {%- endif %}
   {%- endif %}
+  {%- endblock %}
 
   {%- block linktags %}
     {%- if hasdoc('about') %}
